fix project demo and github buttons on smallscreen

--- a/src/components/projectDiv/ProjectDiv.css
+++ b/src/components/projectDiv/ProjectDiv.css
@@ -165,12 +165,13 @@
     font-size: 1.5rem;
   }
   .projects-buttons {
-    width: 90%;
+    width: 100%;
     gap: 10px;
-    align-items: center;
+    flex-direction: column;
+  
   }
   .project-btn {
-    margin: 0.5rem 0;
-    width: 50%;
+    width: 80%;
+      margin: 0.5rem auto;
   }
 }
